--- a/app-cadastro/react/package.json
+++ b/app-cadastro/react/package.json
@@ -10,6 +10,7 @@
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
+    "react-input-mask": "^2.0.4",
     "react-intl": "^3.12.0"
   },
   "devDependencies": {
@@ -20,6 +21,7 @@
     "@types/prop-types": "^15.7.0",
     "@types/ramda": "^0.26.5",
     "@types/react": "^16.9.31",
+    "@types/react-input-mask": "^3.0.1",
     "@vtex/test-tools": "^3.3.2",
     "@vtex/tsconfig": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.5",
